--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 permalink: /blog/
 ---
-<h1>Latest Posts</h1>
+{% include header.html content="Latest Posts" %}
 
 <ul>
   {% for post in site.posts %}
