--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ permalink: /blog/
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
+      <p>{{ post.quote }}</p>
     </li>
   {% endfor %}
 </ul>
